Closed Bug 240504 Opened 22 years ago Closed 22 years ago

REGRESSION: Cannot tab backwards from mail text compose area

Categories

(MailNews Core :: Composition, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: bryner)

References

(Blocks 1 open bug)

Details

(Keywords: access, regression)

Attachments

(1 file)

Steps: 1. Start new mail with Ctrl+M 2. Enter "to" address 3. Press tab 4. Enter subject 5. Press tab 6. Type some text for the body 7. Press Shift+Tab What happens: Focus remains in body composition area What happens: Focus should go back to the subject. Note that it's normal for an unmodified tab key press to not navigate in this situation, because it's used for entering a TAB character. However, shift+tab should work -- I'm pretty sure it used to work. Not sure when it regressed. Found with Mozilla 1.7b Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7b) Gecko/20040413
Flags: blocking1.7?
Further testing reveals that this affects web pages too - you can't shift+tab out of content. I also tried a two-frame set that I happen to have bookmarked and I couldn't shift+tab out of the second frame - and shift+tab out of the first frame went to the second frame too. It looks as if when shift+tab gets to the beginning of the current frame it restarts from the end of the last frame.
Keywords: regression
Backing out bryner's trunk changes to nsEventStateManager seems to fix this.
Flags: blocking1.7?
> Backing out bryner's trunk changes to nsEventStateManager seems to fix this. Has it been backed out of the trunk? Mark this fixed?
Assignee: sspitzer → bryner
This might be affecting only 1.8
Attached patch fix thinkoSplinter Review
Attachment #146510 - Flags: superreview?(jst)
Attachment #146510 - Flags: review?(neil.parkwaycc.co.uk)
Comment on attachment 146510 [details] [diff] [review] fix thinko I remember this one, this was that convoluted code that I asked you to simplify for bug 214306.
Attachment #146510 - Flags: review?(neil.parkwaycc.co.uk) → review+
Comment on attachment 146510 [details] [diff] [review] fix thinko sr=jst
Attachment #146510 - Flags: superreview?(jst) → superreview+
checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: