Fix shift+tab in mail compose (bug 240504). r=neil, sr=jst